[workspace]
members = [ "crisp_core", "crisp_macro"]
resolver = "2"

[package]
name = "crisp"
version = "0.1.0"
edition = "2021"
authors = ["jupitersky", "kipcode66"]
publish = true
categories = ["development-tools", "parser-implementations"]

[[example]]
path = "examples/test.rs"
bench = true
name = "test"
test = true

[dependencies]
crisp_core = { path = "crisp_core", default-features = false }
crisp_macro = { path = "crisp_macro" }

[features]
default = ["debug"]
debug = ["crisp_core/debug"]