[package]
name = "crisp_macro"
version = "0.1.0"
edition = "2021"
authors = ["jupitersky", "kipcode66"]
publish = true
categories = ["development-tools", "parser-implementations"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "^2.0", features = ["parsing", "extra-traits"] } # Use "extra-traits" feature when debugging macros. (increases compile time a lot)
quote = "^1.0"
crisp_core = { path = "../crisp_core" }
