[package]
name = "crisp_core_macro"
version = "0.1.0"
edition = "2024"
authors = ["jupitersky", "kipcode66"]
publish = false
categories = ["development-tools", "parser-implementations"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^1.0"
syn = { version = "^2.0", features = ["parsing", "extra-traits"] } # Use "extra-traits" feature when debugging macros. (increases compile time a lot)
quote = "^1.0"